--- a/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
+++ b/EcoCareApp/EcoCareApp/Views/RegisterUser.xaml
@@ -27,7 +27,6 @@
                     <ScrollView>
 
                         <Grid Padding="0">
-                            <Col
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="60"></RowDefinition>
                                 <RowDefinition Height="20"></RowDefinition>
@@ -42,20 +41,22 @@
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
+                                <RowDefinition Height="60"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
                                 <RowDefinition Height="40"></RowDefinition>
+
 
                             </Grid.RowDefinitions>
 
 
-                            <Label Text="Welcome To Eco Care App, Let the fun begin" Grid.Row="0" Grid.ColumnSpan="2" 
+                            <Label Text="Welcome To Eco Care App, Let the fun begin" Grid.Row="0"  
                                    Style="{StaticResource smallerTitle}" />
                                 <!--Title-->
-                            <Label Grid.Row="2" Grid.ColumnSpan="2" Style="{StaticResource link}" HorizontalOptions="CenterAndExpand">
+                            <Label Grid.Row="2"  Style="{StaticResource link}" HorizontalOptions="CenterAndExpand">
                                     <Label.FormattedText>
                                         <FormattedString>
                                         <Span Text="Already One Of Us? " Style="{StaticResource linkPartA}"></Span>
@@ -70,83 +71,43 @@
 
 
 
-                            <Grid Grid.Row="3">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <Label Text="First Name" Style="{StaticResource labelNameStyle}" IsVisible="{Binding FirstNameTyped}"/>
-                                <Label Text="{Binding FirstNameError}" IsVisible="{Binding ShowFirstNameError}" Style="{StaticResource labelErrorStyle}"/>
-                            </Grid>
-                            <Entry Grid.Row="4" Placeholder="Enter your first name" Text="{Binding FirstName}" Style="{StaticResource entry}"/>
+                                <Label Text="First Name" Grid.Row="3" Style="{StaticResource labelNameStyle}" IsVisible="{Binding FirstNameTyped}"/>
+                            <Label Text="{Binding FirstNameError}" Grid.Row="3" IsVisible="{Binding ShowFirstNameError}" Style="{StaticResource labelErrorStyle}"/>
+                            
+                            <Entry Grid.Row="4"  Placeholder="Enter your first name" Text="{Binding FirstName}" Style="{StaticResource entry}"/>
 
-                            <Grid Grid.Row="5">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <Label Text="Last Name" Style="{StaticResource labelNameStyle}"
+                            <Label Text="Last Name" Grid.Row="5" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding LastNameTyped}"/>
-                                <Label Text="{Binding LastNameError}" IsVisible="{Binding ShowLastNameError}"  Style="{StaticResource labelErrorStyle}"/>
-                            </Grid>
-                            <Entry Grid.Row="6" Placeholder="Enter your last name" Text="{Binding LastName}" Style="{StaticResource entry}"/>
+                            <Label Text="{Binding LastNameError}" Grid.Row="5" IsVisible="{Binding ShowLastNameError}" Style="{StaticResource labelErrorStyle}"/>
+                            
+                            <Entry Grid.Row="6"  Placeholder="Enter your last name" Text="{Binding LastName}" Style="{StaticResource entry}"/>
 
 
-                            <Grid Grid.Row="7">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="User Name" Grid.Column="0" Style="{StaticResource labelNameStyle}"
+                            <Label Text="User Name" Grid.Row="7" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding UserNameTyped}"/>
-                                    <Label Text="{Binding UserNameError}" IsVisible="{Binding ShowUserNameError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
-                                <Entry Grid.Row="8" Grid.ColumnSpan="2" Placeholder="Type a usrname" Text="{Binding UserName}" Style="{StaticResource entry}"/>
+                            <Label Text="{Binding UserNameError}" Grid.Row="7" IsVisible="{Binding ShowUserNameError}" Style="{StaticResource labelErrorStyle}"/>
+                                
+                                <Entry Grid.Row="8"  Placeholder="Type a usrname" Text="{Binding UserName}" Style="{StaticResource entry}"/>
 
-                                <Grid Grid.ColumnSpan="2" Grid.Row="9">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="Email" Grid.Column="0" Style="{StaticResource labelNameStyle}"
-                       IsVisible="{Binding EmailTyped}"/>
-                                    <Label Text="{Binding EmailError}" IsVisible="{Binding ShowEmailError}" Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
-                                <Entry Grid.Row="10" Grid.ColumnSpan="2" Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
+                            <Label Text="Email" Grid.Row="9" Style="{StaticResource labelNameStyle}"
+                            IsVisible="{Binding EmailTyped}"/>
+                            <Label Text="{Binding EmailError}" Grid.Row="9" IsVisible="{Binding ShowEmailError}" Style="{StaticResource labelErrorStyle}"/>
+                                
+                                <Entry Grid.Row="10"  Placeholder="Type an email" Text="{Binding Email}" Style="{StaticResource entry}"/>
 
 
 
 
 
 
-                                <Grid Grid.Row="11">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="Password" Grid.Column="0" Style="{StaticResource labelNameStyle}"
+                            <Label Text="Password" Grid.Row="11" Style="{StaticResource labelNameStyle}"
                        IsVisible="{Binding PasswordTyped}"/>
-                                    <Label Text="{Binding PasswordError}" IsVisible="{Binding ShowPasswordError}"
-                       Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                                </Grid>
+                            <Label Text="{Binding PasswordError}" Grid.Row="11" IsVisible="{Binding ShowPasswordError}"
+                        Style="{StaticResource labelErrorStyle}"/>
+                                
 
 
-                                <Grid Grid.Row="12" Grid.ColumnSpan="2">
+                                <Grid Grid.Row="12" >
                                     <Entry Placeholder="Password"
                 IsPassword="{Binding Source={x:Reference ShowPasswordActualTrigger}, Path=HidePassword}" 
                        Text="{Binding Password}" Style="{StaticResource entry}"/>
@@ -167,20 +128,12 @@
                                 </Grid>
 
 
-                            <Grid Grid.Row="13" Grid.ColumnSpan="2">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="*"/>
-                                    <ColumnDefinition Width="*"/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition Height="*" />
-                                </Grid.RowDefinitions>
-                                <Label Text="Date of Birth" Grid.Column="0" Style="{StaticResource labelNameStyle}"/>
-                                <Label Text="{Binding BirthdayError}" IsVisible="{Binding ShowBirthdayError}"
-                       Grid.Column="1" Style="{StaticResource labelErrorStyle}"/>
-                            </Grid>
+                            <Label Text="Date of Birth" Grid.Row="13" Style="{StaticResource labelNameStyle}"/>
+                            <Label Text="{Binding BirthdayError}" Grid.Row="13" IsVisible="{Binding ShowBirthdayError}"
+                        Style="{StaticResource labelErrorStyle}"/>
+                            
 
-                            <DatePicker Grid.Row="14" Grid.ColumnSpan="2" x:Name="startDatePicker"
+                            <DatePicker Grid.Row="14"  x:Name="startDatePicker"
                     Format="D"
                     Date="{Binding Birthday}" />
 
@@ -188,24 +141,41 @@
 
 
 
-                            <Grid Grid.Row="15" Grid.ColumnSpan="2">
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="*"/>
-                                    </Grid.ColumnDefinitions>
-                                    <Grid.RowDefinitions>
-                                        <RowDefinition Height="*" />
-                                    </Grid.RowDefinitions>
-                                    <Label Text="Country" Grid.Column="0" Style="{StaticResource labelNameStyle}"
-                       IsVisible="{Binding CountryTyped}"/>
-                                </Grid>
-                            <Picker Grid.Row="17" Grid.ColumnSpan="2" Title="Select your country"
-        TitleColor="Blue"
-        ItemsSource="{Binding CountriesList}"
-        ItemDisplayBinding="{Binding CountryName}"
-                    SelectedItem="{Binding Country}"
-                    />
 
-                                <Button Grid.Row="18" Grid.RowSpan="2" Grid.ColumnSpan="2" Text="Sign Up" Command="{Binding ResigterUser}"></Button>
+                            <Label Text="Country" Grid.Row="15" Style="{StaticResource labelNameStyle}"
+                       IsVisible="{Binding CountryTyped}"/>
+
+
+                            <SearchBar Grid.Row="16" x:Name="searchBar" 
+                       Placeholder="Type your country" 
+                       Text="{Binding SearchTerm}"
+                       />
+                            <ScrollView Grid.Row="17">
+
+
+                                <RefreshView x:Name="refreshView"
+             Command="{Binding RefreshCommand}"
+             IsRefreshing="{Binding IsRefreshing}">
+                                    <CollectionView HeightRequest="40" EmptyView="No Countries found" x:Name="collectionName" 
+                                ItemsSource="{Binding FilteredCountries}" SelectionMode="Single"
+                                                BackgroundColor="#B9C6CB" 
+                                                SelectionChangedCommand="{Binding SelctionChanged}"
+                        SelectionChangedCommandParameter="{Binding Source={x:Reference collectionName}, Path=SelectedItem}"
+                                SelectedItem="{Binding SelectedCountry}">
+
+                                        <CollectionView.ItemsLayout>
+                                            <GridItemsLayout Span="1" Orientation="Vertical" />
+                                        </CollectionView.ItemsLayout>
+                                        <CollectionView.ItemTemplate>
+                                            <DataTemplate>
+                                                <Label Text="{Binding Path=CountryName, StringFormat='{0}'}"  HorizontalTextAlignment="Start"
+                                                   />
+                                            </DataTemplate>
+                                        </CollectionView.ItemTemplate>
+                                    </CollectionView>
+                                </RefreshView>
+                            </ScrollView>
+                            <Button Grid.Row="18" Grid.RowSpan="2"  Text="Sign Up" Command="{Binding ResigterUser}"></Button>
                                 
                             </Grid>
                         </ScrollView>
